--- a/src/css/general.css
+++ b/src/css/general.css
@@ -94,3 +94,8 @@ body {
 .dim {
 	color: #CCC;
 }
+
+.oh {
+	display: block;
+	overflow: hidden;
+}
